# MineSweeper

./: README.md  config.py  main.py  pyproject.toml
src/: field.py  game.py  utils.py
